# list

./: CMakeLists.txt  Makefile  README.md  main.c
list/: CMakeLists.txt  doubly_list.c  doubly_list.h  list_common.h  singly_list.c  singly_list.h
test/: CMakeLists.txt  doubly_list_test.c  doubly_list_test.h  singly_list_test.c  singly_list_test.h
